# make4FGLxml

./: .gitignore  MyRegion.reg  README.md  ROI_test_fits.reg  make4FGLxml.py  make4FGLxml_GUI.py  make4FGLxml_new.py  new_make4FGLxml.py  old_make4FGLxml.py  test.xml  test_fits.xml
GUI_code_development/: install.py
GUI_code_development/make4FGLxml_Components/: control.py
LATSourceModel/: README.md  pyproject.toml
LATSourceModel/scripts/: __init__.py
LATSourceModel/src/LATSourceModel/: SourceList.py  __init__.py  make4FGLxml.py  model_components.py  utilities.py
build_model/: __init__.py  model_components.py  utilities.py
lat_source_model/src/lat_source_model/: SourceList.py  __init__.py  model_components.py
make4FGLxml_Components/: __init__.py  control.py  terminal.py
old_code/build_model/: __init__.py
