[build-system]

requires = ["setuptools","wheel"]

build-backend = "setuptools.build_meta"

[project]
name = "LATSourceModel"
authors = [
    {name = "Tyrel Johnson", email = "tyrel.j.johnson@gmail.com"},
]
version = "1.10.8"
description = "A set of functions and classes to build spatial-spectral models for analysis of Fermi LAT gamma-ray data."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.4" #for pathlib
license = {text = "GPL-3.0"}
classifiers = [
"Programming Language :: Python :: 3",
"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
"Operating System :: OS Independent"
]
dependencies = [
    "numpy",
    "pandas",
    "astropy"
]

[project.scripts]
make4FGLxml = "LATSourceModel.make4FGLxml:cli"

[project.urls]
"Home" = "https://github.com/physicsranger/make4FGLxml"
"Issues" = "https://github.com/physicsranger/make4FGLxml/issues"